2007-12-02  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdInstallCheckBinFiles):
	Check 1st line Perl and Python interpreter correctness.
	(CygbuildInstallFixInterpreterPerl): New.
	(CygbuildInstallFixInterpreterPython): New
	(CygbuildInstallFixInterpreterMain): New
	(CygbuildInstallFixMain): Use
	`CygbuildInstallFixInterpreterMain'.

2007-11-30  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/install.tar.options.tmp: Remove Copyright
	template.

	* etc/template/upstream.perl-webget: Remove Copyright
	template.

	* etc/template/setup.hint: Adjust comments

	* bin/cygbuild.sh:
	(CygbuildBootVariablesGlobalMain):
	CYGBUILD_DIFF_OPTIONS: Ignore config.status.
	(CygbuildCommandMain): Add alias 'pchk' as 'patch-check'.
	(CygbuildCmdInstallCheckSetupHint):
	Fix 'setup.hint category should include...'. The
	awk variable 'line' was replaced with correct '$0'.
	(CygbuildConfPerlMain):
	Read user options from CYGWIN-PATCHES/configure.options.
	Add INSTALLDIRS=vendor and set correct PREFIX=/usr
	(CygbuildInstallFixPermissions): Wrong syntax FIND => $FIND
	(CygbuildMakeRunInstallFixPerl): Impre error checking of
	perllocal.pod
	(CygbuildMakeRunInstallFixPerlManpage): New.

2007-11-29  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/postinstall.sh.tmp (InstalInfo): Added quotes
	and removed extra $(ls ...) call. Not neeed in for-loop.

2007-11-06  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:(CygbuildCmdInstallCheckSetupHintx):
	Improve ldesc: double quote check.

2007-11-04  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdInstallCheckSetupHint):
	Add check for finding double quotes from ldesc: portion.

2007-10-29  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildVersionInfo): Add support for
	foo_V1.1, foo-1.1-rc1
	* bin/cygbuild.pl (Version): Add support for
	foo_V1.1, foo-1.1-rc1

2007-10-28  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/package.README: Remove 'Other version' tag